# FingerprintSilicon

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
SiliconFingerprint/: __init__.py  analyzer.py  c2pa_verify.py  cli.py  models.py  report.py  signatures.py  web.py
SiliconFingerprint/static/: style.css
SiliconFingerprint/templates/: index.html
examples/: README.md
tests/: test_analyzer.py  test_c2pa_verify.py  test_cli.py  test_web.py
