[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "siliconfingerprint"
version = "0.2.0"
description = "OSINT-friendly AI media fingerprint analyzer with C2PA verification, simple reports, and a local web UI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "SiliconFingerprint Contributors" }
]
keywords = ["osint", "forensics", "deepfake", "metadata", "ai-media", "c2pa", "content-credentials"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
  "Topic :: Multimedia :: Graphics"
]

[project.optional-dependencies]
image = ["Pillow>=10.0.0"]
c2pa = ["c2pa-python>=0.30.0"]
web = ["Flask>=3.0.0"]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0"]
all = ["Pillow>=10.0.0", "c2pa-python>=0.30.0", "Flask>=3.0.0"]

[project.scripts]
silicon = "siliconfingerprint.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["siliconfingerprint*"]

[tool.setuptools.package-data]
siliconfingerprint = ["templates/*.html", "static/*.css"]
